# Final_Project

./: README.md  Untitled.ipynb  main.py  pyproject.toml
.virtual_documents/2_Notebooks/: LBSM_datacleaning.ipynb  Sherlock_Homes - ML-LGBM.ipynb  Sherlock_Homes - ML-RF_A(01).ipynb  Sherlock_Homes - ML-XG.ipynb  Sherlock_Homes - ML-XG_B(02).ipynb  Sherlock_Homes - ML-XG_D(04).ipynb  Sherlock_Homes-Analysis.ipynb
1_Data/: .~lock.df_cleaned.csv#
1_Data/App/: df_lbsm_streamlit.csv
2_Notebooks/: LBSM_datacleaning.ipynb  Sherlock_Homes - ML-00.ipynb  Sherlock_Homes - ML-LGBM.ipynb  Sherlock_Homes - ML-RF.ipynb  Sherlock_Homes - ML-RF_A(01).ipynb  Sherlock_Homes - ML-RF_B(02).ipynb  Sherlock_Homes - ML-RF_C(03).ipynb  Sherlock_Homes - ML-Summary.ipynb  Sherlock_Homes - ML-Tries-00.ipynb  Sherlock_Homes - ML-Tries.ipynb  Sherlock_Homes - ML-XG_B(02).ipynb  Sherlock_Homes - ML-XG_D(04).ipynb  Sherlock_Homes-Analysis.ipynb
2_Notebooks/.ipynb_checkpoints/: LBSM_datacleaning-checkpoint.ipynb  Sherlock_Homes - ML-00-checkpoint.ipynb  Sherlock_Homes - ML-LGBM-checkpoint.ipynb  Sherlock_Homes - ML-RF-checkpoint.ipynb  Sherlock_Homes - ML-RF_A(01)-checkpoint.ipynb  Sherlock_Homes - ML-RF_C(03)-checkpoint.ipynb  Sherlock_Homes - ML-Tries-checkpoint.ipynb  Sherlock_Homes - ML-XG-checkpoint.ipynb  Sherlock_Homes - ML-XG_011-checkpoint.ipynb  Sherlock_Homes - ML-XG_A(01)-checkpoint.ipynb  old_FP_0-checkpoint.ipynb  (+4 more)
3_App/: Untitled.ipynb  Watson_launcher-V1_0.ipynb  app.py  requirements.txt  watson.py  watsonV1_0.py
99_Brainstorm/: Capital_Projects_Dashboard_Data_Dictionary.xlsx
(+9 files in other folders)
